# Competitive_Coding_Practice

./: .autocp  CMakeLists.txt  README.md
CodeChef - START73D/: Append_for_OR.cpp  Chef_Plays_Ludo.cpp  Lucky_Numbers.cpp  Multivitamin_Tablets.cpp
CodeChef - START74D/: Chef_And_Babla.cpp  Distinct_Values.cpp  Facebook.cpp  Odd_Even_Binary_String.cpp
Codeforces - Codeforces Beta Round 32 Div 2 Codeforces format/: B_Borze.cpp
Codeforces - Codeforces Beta Round 55 Div 2/: A_Word.cpp
Codeforces - Codeforces Beta Round 63 Div 2/: A_Young_Physicist.cpp
Codeforces - Codeforces Beta Round 69 Div 2 Only/: A_Panoramixs_Prediction.cpp
Codeforces - Codeforces Beta Round 84 Div 2 Only/: A_Nearly_Lucky_Number.cpp
Codeforces - Codeforces Round 161 Div 2/: A_Beautiful_Matrix.cpp
Codeforces - Codeforces Round 163 Div 2/: A_Stones_on_the_Table.cpp  B_Queue_at_the_School.cpp
Codeforces - Codeforces Round 166 Div 2/: A_Beautiful_Year.cpp
Codeforces - Codeforces Round 172 Div 2/: A_Word_Capitalization.cpp
GeeksForGeeksPractice/: SubarrayWithGivenSum.cpp
Google Coding Competitions - Round A 2022 - Kick Start 2022/: Speed_Typing.cpp
HackerRank - Algorithms - Implementation - Forming a Magic Square - Prepare - Algorithms - Implementation/: Forming_a_Magic_Square.cpp
HackerRank - Algorithms - Warmup - Diagonal Difference - Prepare - Algorithms - Warmup/: Diagonal_Difference.cpp
HackerRank - Algorithms - Warmup - Mini-Max Sum - Prepare - Algorithms - Warmup/: Mini_Max_Sum.cpp
HackerRank - Forfeit/: Compare_the_Triplets.cpp  Diagonal_Difference.cpp  Flatland_Space_Stations.cpp  Gaming_Array.cpp  Super_Reduced_String.cpp  Two_Characters.cpp
