cmake_minimum_required(VERSION 3.21)
project(CPClion)

set(CMAKE_CXX_STANDARD 17)

#add_executable(CPClion main.cpp "HackerRank - Algorithms - Warmup - Diagonal Difference - Prepare - Algorithms - Warmup/Diagonal_Difference.cpp" "HackerRank - Algorithms - Implementation - Forming a Magic Square - Prepare - Algorithms - Implementation/Forming_a_Magic_Square.cpp")

add_executable(Mini_Max_Sum "HackerRank - Algorithms - Warmup - Mini-Max Sum - Prepare - Algorithms - Warmup/Mini_Max_Sum.cpp" "HackerRank - Algorithms - Warmup - Mini-Max Sum - Prepare - Algorithms - Warmup/Mini_Max_Sum.cpp" "HackerRank - Algorithms - Warmup - Diagonal Difference - Prepare - Algorithms - Warmup/Diagonal_Difference.cpp")
add_executable(Diagonal_Difference "HackerRank - Forfeit/Diagonal_Difference.cpp" "HackerRank - Algorithms - Warmup - Diagonal Difference - Prepare - Algorithms - Warmup/Diagonal_Difference.cpp" "HackerRank - Algorithms - Warmup - Diagonal Difference - Prepare - Algorithms - Warmup/Diagonal_Difference.cpp")
add_executable(Forming_a_Magic_Square "HackerRank - Algorithms - Implementation - Forming a Magic Square - Prepare - Algorithms - Implementation/Forming_a_Magic_Square.cpp")
add_executable(Compare_the_Triplets "HackerRank - Forfeit/Compare_the_Triplets.cpp" "HackerRank - Forfeit/Compare_the_Triplets.cpp" "HackerRank - Forfeit/Flatland_Space_Stations.cpp" "HackerRank - Forfeit/Two_Characters.cpp" "HackerRank - Forfeit/Gaming_Array.cpp" "HackerRank - Forfeit/Super_Reduced_String.cpp")
add_executable(Flatland_Space_Stations "HackerRank - Forfeit/Flatland_Space_Stations.cpp")
add_executable(Two_Characters "HackerRank - Forfeit/Two_Characters.cpp")
add_executable(Gaming_Array "HackerRank - Forfeit/Gaming_Array.cpp")
add_executable(Super_Reduced_String "HackerRank - Forfeit/Super_Reduced_String.cpp")
add_executable(A_Young_Physicist "Codeforces - Codeforces Beta Round 63 Div 2/A_Young_Physicist.cpp" "Codeforces - Codeforces Beta Round 63 Div 2/A_Young_Physicist.cpp")
add_executable(A_Beautiful_Matrix "Codeforces - Codeforces Round 161 Div 2/A_Beautiful_Matrix.cpp")
add_executable(B_Queue_at_the_School "Codeforces - Codeforces Round 163 Div 2/B_Queue_at_the_School.cpp")
add_executable(B_Borze "Codeforces - Codeforces Beta Round 32 Div 2 Codeforces format/B_Borze.cpp")
add_executable(A_Beautiful_Year "Codeforces - Codeforces Round 166 Div 2/A_Beautiful_Year.cpp")
add_executable(A_Word "Codeforces - Codeforces Beta Round 55 Div 2/A_Word.cpp")
add_executable(A_Word_Capitalization "Codeforces - Codeforces Round 172 Div 2/A_Word_Capitalization.cpp")
add_executable(A_Nearly_Lucky_Number "Codeforces - Codeforces Beta Round 84 Div 2 Only/A_Nearly_Lucky_Number.cpp")
add_executable(A_Stones_on_the_Table "Codeforces - Codeforces Round 163 Div 2/A_Stones_on_the_Table.cpp")
add_executable(Speed_Typing "Google Coding Competitions - Round A 2022 - Kick Start 2022/Speed_Typing.cpp" "Google Coding Competitions - Round A 2022 - Kick Start 2022/Speed_Typing.cpp")
add_executable(A_Panoramixs_Prediction "Codeforces - Codeforces Beta Round 69 Div 2 Only/A_Panoramixs_Prediction.cpp" "Codeforces - Codeforces Beta Round 69 Div 2 Only/A_Panoramixs_Prediction.cpp")
add_executable(Chef_Plays_Ludo "CodeChef - START73D/Chef_Plays_Ludo.cpp")
add_executable(Multivitamin_Tablets "CodeChef - START73D/Multivitamin_Tablets.cpp")
add_executable(Lucky_Numbers "CodeChef - START73D/Lucky_Numbers.cpp")
add_executable(Append_for_OR "CodeChef - START73D/Append_for_OR.cpp")
add_executable(Facebook "CodeChef - START74D/Facebook.cpp")
add_executable(Odd_Even_Binary_String "CodeChef - START74D/Odd_Even_Binary_String.cpp")
add_executable(Distinct_Values "CodeChef - START74D/Distinct_Values.cpp")
add_executable(Chef_And_Babla "CodeChef - START74D/Chef_And_Babla.cpp")
add_executable(SubarrayWithGivenSum "GeeksForGeeksPractice/SubarrayWithGivenSum.cpp")